--- a/startfolder/.env.example
+++ b/startfolder/.env.example
@@ -1,14 +1,20 @@
-# database
+# db ip / host
 DBHOST=
+# db name
 DBNAME=
+# username to log in db
 DBUSER=
+# password to log in db
 DBPAS=
 
 # key encryption
 KEY=
 
-# sets email
+# email address
 EMAIL=
+# email password or app password for gmail
 EMAILPAS=
+# email sender (smtp server)
 SMTPSERVER=
+# port of smtp server
 PORT=
