--- a/.env
+++ b/.env
@@ -10,6 +10,8 @@ DBPAS=
 # key encryption
 KEY=
 
+IV=
+
 # email address
 EMAIL=
 # email password or app password for gmail
@@ -18,3 +20,8 @@ EMAILPAS=
 SMTPSERVER=
 # port of smtp server
 PORT=
+
+#telegram
+BOTTOKEN=
+SECRET=
+APITOKEN=
