--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ DBPAS=
 
 # key encryption
 KEY=
+
 IV=
 
 # email address
@@ -20,5 +21,7 @@ SMTPSERVER=
 # port of smtp server
 PORT=
 
-#Telegram bot 
-BOT_TOKEN=
+#telegram
+BOTTOKEN=
+SECRET=
+APITOKEN=
